opengl/icc_shader: more properly apply the MHC2 tag

For shaper+matrix profiles, the matrix was applied in RGB... but it needs to be
applied in XYZ space, with an additional unintuitive step to convert back to RGB
after it.
The spec also doesn't describe how you'd correctly apply it in combination with
BToA tags, so the tag forces the shaper+matrix path from now on.

The previous code resulting in visually correct results with some profiles was
merely a coincidence, so this adds an additional autotest case to verify the
correctness more objectively.

BUG: 513691