autotests/test_colorspaces.cpp
@@ -379,16 +379,22 @@ void TestColorspaces::testOpenglShader()
 void TestColorspaces::testIccShader_data()
 {
     QTest::addColumn<QString>("iccProfilePath");
+    QTest::addColumn<QString>("lcmsIccProfilePath");
     QTest::addColumn<RenderingIntent>("intent");
     QTest::addColumn<uint32_t>("lcmsIntent");
     QTest::addColumn<int>("maxAllowedError");
 
     const auto F13 = QFINDTESTDATA("data/Framework 13.icc");
     const auto Samsung = QFINDTESTDATA("data/Samsung CRG49 Shaper Matrix.icc");
-    QTest::addRow("relative colorimetric Framework 13") << F13 << RenderingIntent::RelativeColorimetric << uint32_t(INTENT_RELATIVE_COLORIMETRIC) << 5;
-    QTest::addRow("absolute colorimetric Framework 13") << F13 << RenderingIntent::AbsoluteColorimetricNoAdaptation << uint32_t(INTENT_ABSOLUTE_COLORIMETRIC) << 4;
-    QTest::addRow("relative colorimetric CRG49") << Samsung << RenderingIntent::RelativeColorimetric << uint32_t(INTENT_RELATIVE_COLORIMETRIC) << 2;
-    QTest::addRow("absolute colorimetric CRG49") << Samsung << RenderingIntent::AbsoluteColorimetricNoAdaptation << uint32_t(INTENT_ABSOLUTE_COLORIMETRIC) << 2;
+    QTest::addRow("relative colorimetric Framework 13") << F13 << F13 << RenderingIntent::RelativeColorimetric << uint32_t(INTENT_RELATIVE_COLORIMETRIC) << 5;
+    QTest::addRow("absolute colorimetric Framework 13") << F13 << F13 << RenderingIntent::AbsoluteColorimetricNoAdaptation << uint32_t(INTENT_ABSOLUTE_COLORIMETRIC) << 4;
+    QTest::addRow("relative colorimetric CRG49") << Samsung << Samsung << RenderingIntent::RelativeColorimetric << uint32_t(INTENT_RELATIVE_COLORIMETRIC) << 2;
+    QTest::addRow("absolute colorimetric CRG49") << Samsung << Samsung << RenderingIntent::AbsoluteColorimetricNoAdaptation << uint32_t(INTENT_ABSOLUTE_COLORIMETRIC) << 2;
+
+    // NOTE that LCMS doesn't apply the MHC2 tag, so we compare with the native profile instead
+    // The margin for error has to be a bit higher because of that
+    QTest::addRow("absolute colorimetry with MHC2") << QFINDTESTDATA("data/HP 'sRGB' profile with MHC2.icc") << QFINDTESTDATA("data/HP 'Native' profile.icc")
+                                                    << RenderingIntent::AbsoluteColorimetricNoAdaptation << uint32_t(INTENT_ABSOLUTE_COLORIMETRIC) << 7;
 }
 
 void TestColorspaces::testIccShader()
@@ -405,6 +411,7 @@ void TestColorspaces::testIccShader()
     const auto imageColorspace = ColorDescription::sRGB;
 
     QFETCH(QString, iccProfilePath);
+    QFETCH(QString, lcmsIccProfilePath);
     QFETCH(RenderingIntent, intent);
     QFETCH(uint32_t, lcmsIntent);
 
@@ -450,7 +457,7 @@ void TestColorspaces::testIccShader()
         // as that uses the sRGB piece-wise transfer function, which is not correct for our use case
         cmsHPROFILE sRGBHandle = cmsCreateRGBProfile(&sRGBWhite, &sRGBPrimaries, toneCurves.data());
 
-        cmsHPROFILE handle = cmsOpenProfileFromFile(iccProfilePath.toUtf8(), "r");
+        cmsHPROFILE handle = cmsOpenProfileFromFile(lcmsIccProfilePath.toUtf8(), "r");
         QVERIFY(handle);
 
         const auto transform = cmsCreateTransform(sRGBHandle, TYPE_RGB_8, handle, TYPE_RGB_8, lcmsIntent, cmsFLAGS_NOOPTIMIZE);
